--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="container">
-    <h1 class="title">Deck Launcher</h1>
+    <h1 class="title">TileO</h1>
     <div id="grid" class="grid"></div>
     <div class="footer">
       <small>Tap an icon to launch on PC</small>
