--- a/static/index.html
+++ b/static/index.html
@@ -1,25 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Tileo</title>
   <link rel="stylesheet" href="/static/styles.css" />
 </head>
+
 <body>
   <main class="container">
     <h1 class="title">TileO</h1>
     <div id="grid" class="grid"></div>
     <div class="footer">
       <small>Tap an icon to launch on PC</small>
-      <div>
-        <label>Token:</label>
-        <input id="token" type="password" placeholder="paste token"/>
+      <!-- token input container (replace the old token div with this) -->
+      <div id="tokenContainer" style="display:flex; align-items:center; gap:8px;">
+        <label style="margin-right:6px;">Token:</label>
+        <input id="token" type="password" placeholder="paste token" />
         <button id="saveToken">Save</button>
       </div>
+
+      <!-- token saved status (hidden until a token exists or is saved) -->
+      <div id="tokenStatus" style="display:none; align-items:center; gap:8px;">
+        <small style="margin-right:8px;">Token saved</small>
+        <button id="changeToken">Change</button>
+      </div>
+
     </div>
   </main>
 
   <script src="/static/script.js"></script>
 </body>
+
 </html>
