Minor UI Tweaks

--- a/static/index.html
+++ b/static/index.html
@@ -49,10 +49,10 @@
   <div id="rotateOverlay" aria-hidden="true" class="">
     <div class="box">
       <div class="title">Rotate your phone</div>
-      <div class="desc">TileO works best in landscape. Please rotate your phone or add TileO to your home screen for the full-screen, landscape experience.</div>
+      <div class="desc">TileO works best in landscape. Please rotate your phone.</div>
       <div class="action">
-        <button id="tryFullscreenBtn">Try Fullscreen</button>
-        <button id="a2hsBtn" class="secondary">How to add to Home Screen</button>
+        <button id="tryFullscreenBtn">Enter Fullscreen</button>
+        <!-- <button id="a2hsBtn" class="secondary">How to add TileO to Home Screen</button> -->
       </div>
     </div>
   </div>
